--- a/S02.03-Exercise-Polish/app/src/main/res/values/strings.xml
+++ b/S02.03-Exercise-Polish/app/src/main/res/values/strings.xml
@@ -27,7 +27,8 @@
     <!--Used in overflow menu to refresh weather data-->
     <string name="action_refresh">Refresh</string>
 
-    <!--TODO (1) Add a string resource for your error message-->
+    <!-- (1) Add a string resource for your error message-->
+    <string name="error_message">An unexpected error occurred</string>
 
 
     <!-- - - - - - - - - - - - - -->
